src/main/java/com/example/gamja/error/ErrorExceptionControllerAdvice.java
package com.example.gamja.error;

import lombok.RequiredArgsConstructor;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RequiredArgsConstructor
@RestControllerAdvice
public class ErrorExceptionControllerAdvice {
}
